--- a/index.html
+++ b/index.html
@@ -12,46 +12,46 @@
 <body>
   <main>
     <h1 class="push-none gutter-1-2 pad-t-1-2 pad-b-1-4">Prehistoric mammals</h1>
-    <ol class="grid grid-stretch">
+    <ol class="grid grid-stretch gutter-1-4">
 
-      <li class="unit unit-content-distribute unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 island-1-2">
+      <li class="unit unit-content-distribute unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-1-4 pad-t-1-2 pad-b-1-2">
         <div class="card push-none">
           <img class="img-flex island-1-2" src="images/arsinoitherium.jpg" alt="">
           <div class="gutter-1-2 pad-b-1-2">
-            <h2 class="mega push-none pad-b-1-2">Arsinoitherium</h2>
+            <h2 class="giga push-none pad-b-1-2">Arsinoitherium</h2>
             <p class="content-fill push-none pad-b-1-2">Arsinoitherium is an extinct genus mammal that were superficially rhinoceros-like herbivores that lived in northern Africa from 36 to 30 million years ago.</p>
             <a class="mega" href="https://en.wikipedia.org/wiki/Arsinoitherium" rel="external">Learn more about Arsinoitherium</a>
           </div>
         </div>
       </li>
 
-      <li class="unit unit-content-distribute unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 island-1-2">
+      <li class="unit unit-content-distribute unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-1-4 pad-t-1-2 pad-b-1-2">
         <div class="card push-none">
           <img class="img-flex island-1-2" src="images/elasmotherium.jpg" alt="">
           <div class="gutter-1-2 pad-b-1-2">
-            <h2 class="mega push-none pad-b-1-2">Elasmotherium</h2>
+            <h2 class="giga push-none pad-b-1-2">Elasmotherium</h2>
             <p class="content-fill push-none pad-b-1-2">Elasmotherium, also known as the Giant Siberian Unicorn, is an extinct genus of rhinoceros endemic to Eurasia during the Late Pliocene through the Pleistocene.</p>
             <a class="mega" href="https://en.wikipedia.org/wiki/Elasmotherium" rel="external">Learn more about Elasmotherium</a>
           </div>
         </div>
       </li>
 
-      <li class="unit unit-content-distribute unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 island-1-2">
+      <li class="unit unit-content-distribute unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-1-4 pad-t-1-2 pad-b-1-2">
         <div class="card push-none">
           <img class="img-flex island-1-2" src="images/glyptodon.jpg" alt="">
           <div class="gutter-1-2 pad-b-1-2">
-            <h2 class="mega push-none pad-b-1-2">Glyptodon</h2>
+            <h2 class="giga push-none pad-b-1-2">Glyptodon</h2>
             <p class="content-fill push-none pad-b-1-2">Glyptodon was a large, armored mammal, a relative of armadillos that lived during the Pleistocene epoch.</p>
             <a class="mega" href="https://en.wikipedia.org/wiki/Glyptodon" rel="external">Learn more about Glyptodon</a>
           </div>
         </div>
       </li>
 
-      <li class="unit unit-content-distribute unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 island-1-2">
+      <li class="unit unit-content-distribute unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-1-4 pad-t-1-2 pad-b-1-2">
         <div class="card push-none">
           <img class="img-flex island-1-2" src="images/megatherium.jpg" alt="">
           <div class="gutter-1-2 pad-b-1-2">
-            <h2 class="mega push-none pad-b-1-2">Megatherium</h2>
+            <h2 class="giga push-none pad-b-1-2">Megatherium</h2>
             <p class="content-fill push-none pad-b-1-2">Megatherium was a genus of elephant-sized ground sloths endemic to South America that lived from the Early Pliocene to the Pleistocene.</p>
             <a class="mega" href="https://en.wikipedia.org/wiki/Megatherium" rel="external">Learn more about Megatherium</a>
           </div>
